# webview_cef

./: .gitignore  .metadata  CHANGELOG.md  README.md  README.zh-CN.md  pubspec.yaml
.github/workflows/: publish.yaml  test_linux_x64.yaml  test_linux_x86.yaml  test_macos.yaml  test_windows_x64.yaml
common/: simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h  webview_app.cc  webview_app.h  webview_cookieVisitor.cc  webview_cookieVisitor.h  webview_handler.cc  webview_handler.h  webview_js_handler.cc  webview_js_handler.h  webview_plugin.cc  webview_plugin.h  webview_value.cc  webview_value.h
elinux/: CMakeLists.txt  webview_cef_plugin.cc  webview_cef_texture.h
elinux/include/webview_cef/: webview_cef_plugin.h
example/: .gitignore  .metadata  README.md  pubspec.yaml
example/elinux/: CMakeLists.txt  webview_cef_plugin.cc  webview_cef_texture.h
example/elinux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/elinux/runner/: main.cc
example/lib/: main.dart  tab_example.dart
example/linux/: CMakeLists.txt  main.cc  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: Podfile  add_cef_helpers.rb
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: AppDelegate.h  AppDelegate.m  Helper-Info.plist  cef_helper_main.mm  main.m  main.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Base.lproj/: MainMenu.xib
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp  win32_window.cpp  win32_window.h
lib/: webview_cef.dart  webview_cef_method_channel.dart  webview_cef_platform_interface.dart
lib/src/: navigation_decision.dart  navigation_delegate.dart  text_input_handler.dart  webview.dart  webview_cef_api.dart  webview_events_listener.dart  webview_inject_user_script.dart  webview_javascript.dart  webview_manager.dart  webview_textinput.dart  webview_tooltip.dart
linux/: .gitignore  CMakeLists.txt  webview_cef_keyevent.h  webview_cef_plugin.cc  webview_cef_texture.h
linux/include/webview_cef/: webview_cef_plugin.h
linux/target_modifier/: modify_target.sh
linux/target_modifier/tools/: add_key_press_event_to_my_application.sh  add_key_release_event_to_my_application.sh  add_webview_init_to_main.sh  import_webview_cef_header_main.sh  import_webview_cef_header_my_application.sh
linux/third/cef/include/: cef_command_ids.h  cef_pack_resources.h  cef_pack_strings.h  cef_version.h
macos/: embed_cef_helpers.rb  webview_cef.podspec
macos/Classes/: CefWrapper.h  CefWrapper.mm  WebviewCefPlugin.h  WebviewCefPlugin.m  WebviewCefPlugin.swift  WebviewCefTexture.h  WebviewCefTexture.mm  cef_bridge.cc  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h
macos/helper/: cef_helper_main.mm
macos/scripts/: download_cef.sh  embed_cef_helpers.sh
macos/third/cef/: .gitignore
macos/third/cef/include/: cef_pack_resources.h  cef_pack_strings.h
test/: federated_plugin_test.dart  integration_test.dart  webview_cef_method_channel_test.dart  webview_cef_test.dart  webview_inject_user_script_test.dart  webview_main_test.dart
third/: download.cmake
third/cef/: .gitignore
third/cef/include/: cef_command_ids.h  cef_config.h  cef_pack_resources.h  cef_pack_strings.h  cef_version.h
windows/: .gitignore  CMakeLists.txt  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h  simple_handler_win.cc  texture_handler.cc  texture_handler.h  webview_cef_gpu_texture.cc  webview_cef_gpu_texture.h  webview_cef_keyevent.h  webview_cef_plugin.cpp  webview_cef_plugin.h  webview_cef_plugin_c_api.cpp
windows/cmake/: Downloader.cmake
windows/include/cef/include/: cef_version.h
windows/include/webview_cef/: webview_cef_plugin_c_api.h
